# shitou

./: .gitignore  AGENTS.md  README.md  components.json  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  state.rs
src/accounts/: AccountSidebar.svelte  account-colors.ts  provider.ts
src/app/: formatting.ts  theme.ts
src/auth/: AuthScreen.svelte
src/layout/: resizable-panels.ts
src/lib/: tauri.ts  types.ts
src/mailbox/: folder-model.ts
src/messages/: MessageList.svelte  MessageReader.svelte  SenderAvatar.svelte  sender-avatar.ts
src/routes/: +page.svelte
src/settings/: SettingsDialog.svelte
src/shared/: mail.types.ts
src/shared/ui/avatar/: avatar-fallback.svelte  avatar-image.svelte  avatar.svelte
src/shared/ui/button/: button.svelte
src/shared/ui/button-group/: button-group.svelte  index.ts
src/shared/ui/context-menu/: context-menu-content.svelte  context-menu-item.svelte  context-menu-separator.svelte  context-menu-trigger.svelte  context-menu.svelte  index.ts
src/shared/ui/sheet/: sheet-content.svelte  sheet-description.svelte  sheet-footer.svelte  sheet-header.svelte  sheet-overlay.svelte  sheet-title.svelte
src/styles/: app.css
src/tauri/: client.ts  demo-mailbox.ts
